--- a/estilos/links-style.css
+++ b/estilos/links-style.css
@@ -1,58 +1,82 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@200;300;400;500&display=swap');
+
 /*Mobile First PÁGINA LINKS*/
 
 * {
-    font-family: sans-serif;
+    font-family: 'Jost', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-body, html {
-    width: 100vw;
-    height: 100vh;
 }
 
 body {
     background: white url(../imagens/background-links-agata-cruz.jpg) no-repeat;
     background-position: center;
     background-size: cover;
-    
+
 }
 
 div.img-perfil {
     width: 80px;
     height: 80px;
-    background-color: aqua;
+    background-image: url(../imagens/foto-perfil-agata-cruz-150px.jpg);
+    background-size: contain;
     border-radius: 5px;
     margin: auto;
+    box-shadow: 0 0 5px 5px white;
 }
 
 main {
     width: 70vw;
     margin: auto;
-    padding-top: 70px;
+    padding-top: 45px;
 }
 
-h1, ul {
+h1,
+ul {
     text-align: center;
 }
 
 h1 {
     color: white;
-    font-size: 1.5em;
+    font-size: 1.4em;
     font-weight: 400;
     margin-top: 15px;
+}
+
+h1>span {
+    font-weight: 500;
+}
+
+div.lista-de-links {
+    background-color: rgba(255, 255, 255, 0.404);
+    margin-top: 50px;
+    margin-bottom: 20px;
+    padding: 40px 5px;
+    border-radius: 10px;
 }
 
 ul {
     list-style-type: none;
 }
 
-div.lista-de-links {
-    background-color: rgba(255, 255, 255, 0.404);
-    margin-top: 50px;
-    padding: 70px 5px;
-    border-radius: 10px;
+ul > li {
+    margin-bottom: 15px;
+}
+
+ul > li > a {
+    text-decoration: none;
+    color: black;
+    font-size: 1em;
+    font-weight: 500;
+    background-color: white;
+    padding: 10px 20px;
+    border-radius: 50px;
+}
+
+ul > li > a:hover {
+    background-color: cornsilk;
+    text-decoration: underline;
 }
