add nova estrutura

--- a/estilos/links-style.css
+++ b/estilos/links-style.css
@@ -15,7 +15,12 @@ body {
     background: white url(../imagens/background-links-agata-cruz.jpg) no-repeat;
     background-position: center;
     background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
 
+header {
+    margin-top: 70px;
 }
 
 div.img-perfil {
@@ -28,18 +33,8 @@ div.img-perfil {
     box-shadow: 0 0 5px 5px white;
 }
 
-main {
-    width: 70vw;
-    margin: auto;
-    padding-top: 45px;
-}
-
-h1,
-ul {
-    text-align: center;
-}
-
 h1 {
+    text-align: center;
     color: white;
     font-size: 1.4em;
     font-weight: 400;
@@ -50,7 +45,13 @@ h1>span {
     font-weight: 500;
 }
 
-div.lista-de-links {
+main {
+    width: 80vw;
+    margin: auto;
+    text-align: center;
+}
+
+main.lista-de-links {
     background-color: rgba(255, 255, 255, 0.404);
     margin-top: 50px;
     margin-bottom: 20px;
@@ -59,11 +60,19 @@ div.lista-de-links {
 }
 
 ul {
+    display: flex;
+    flex-direction: column;
     list-style-type: none;
 }
 
 ul > li {
     margin-bottom: 15px;
+}
+
+div.lista-de-links > ul > li > div.item-lista-1 {
+    background-color: white;
+    padding: 10px 20px;
+    border-radius: 50px;
 }
 
 ul > li > a {
