--- a/estilos/links-style.css
+++ b/estilos/links-style.css
@@ -20,7 +20,7 @@ body {
 }
 
 header {
-    margin-top: 70px;
+    margin-top: 50px;
 }
 
 div.img-perfil {
@@ -49,6 +49,12 @@ main {
     width: 80vw;
     margin: auto;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    background: transparent;
+    border-radius: 20px;
+    backdrop-filter: blur(3px);
 }
 
 main.lista-de-links {
@@ -56,36 +62,29 @@ main.lista-de-links {
     margin-top: 50px;
     margin-bottom: 20px;
     padding: 40px 5px;
-    border-radius: 10px;
+    border-radius: 20px 1px;
 }
 
-ul {
-    display: flex;
-    flex-direction: column;
-    list-style-type: none;
-}
-
-ul > li {
-    margin-bottom: 15px;
-}
-
-div.lista-de-links > ul > li > div.item-lista-1 {
-    background-color: white;
-    padding: 10px 20px;
-    border-radius: 50px;
-}
-
-ul > li > a {
+section.sessao-item > a {
     text-decoration: none;
     color: black;
     font-size: 1em;
     font-weight: 500;
+}
+
+div.conteudo-item {
+    margin: auto;
+    width: 90%;
     background-color: white;
     padding: 10px 20px;
     border-radius: 50px;
 }
 
-ul > li > a:hover {
-    background-color: cornsilk;
+div.conteudo-item:hover {
+    background-color: rgba(170, 170, 170, 0.253);
+    box-shadow: 0 0 1em white;
+}
+
+section.sessao-item > a:hover {
     text-decoration: underline;
 }
