--- a/estilos/links-media-query.css
+++ b/estilos/links-media-query.css
@@ -1,3 +1,61 @@
 @charset "UTF-8";
 
 /*Todas as demais mídias PÁGINA LNKS*/
+
+/* TABLET */
+@media screen and (min-width: 768px) and (max-width: 992px) {
+    h1 {
+        font-size: 2em;
+    }
+
+    section.sessao-item>a {
+        font-size: 1.5em;
+        font-weight: 400;
+    }
+
+    main {
+        gap: 1.3rem;
+    }
+}
+
+/* DESKTOP */
+@media screen and (min-width: 992px) and (max-width: 1200px) {
+    h1 {
+        font-size: 2.3em;
+    }
+
+    section.sessao-item>a {
+        font-size: 1.8em;
+        font-weight: 400;
+    }
+
+    main {
+        width: 70vw;
+        gap: 2rem;
+    }
+
+    main.lista-de-links {
+        padding: 100px 5px;
+    }
+}
+
+/* GRANDES TELAS */
+@media screen and (min-width: 1200px) {
+    h1 {
+        font-size: 2.3em;
+    }
+
+    section.sessao-item>a {
+        font-size: 1.6em;
+        font-weight: 400;
+    }
+
+    main {
+        width: 50vw;
+        gap: 1.7rem;
+    }
+
+    main.lista-de-links {
+        padding: 60px 5px;
+    }
+}
