--- a/estilos/home-media-query.css
+++ b/estilos/home-media-query.css
@@ -1,3 +1,8 @@
 @charset "UTF-8";
 
 /*Todas as demais mídias PÁGINA HOME/INDEX*/
+
+/* TABLET */
+@media screen and (min-width: 768px) and (max-width: 992px) {
+    
+}
