--- a/estilos/services-style.css
+++ b/estilos/services-style.css
@@ -2,7 +2,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@200;300;400;500&display=swap');
 
-/*Mobile First PÁGINA HOME/INDEX*/
+/*Mobile First PÁGINA SERVIÇOS*/
 
 * {
     font-family: 'Jost', sans-serif;
@@ -47,75 +47,19 @@ nav#menu-principal > a:hover {
     text-decoration: overline;
 }
 
-div.foto-principal {
-    margin-top: 20px;
-}
-
-div.foto-principal > img {
+section.lista-de-itens {
     display: block;
     margin: auto;
-    width: 280px;
-}
-
-div.foto-principal2 > img {
-    display: none;
-}
-
-div.fake-header {
-    display: none;
-}
-
-div.texto-principal {
-    display: block;
-    margin: auto;
-    margin-top: 30px;
-    margin-bottom: 20px;
-    text-align: center;
-}
-
-div.texto-principal > span.apresentacao > p {
-    font-size: 1.5em;
-    color: #1D2C40;
-}
-
-div.texto-principal > span.nome > p {
-    display: block;
-    font-size: 2.2em;
-    font-weight: 600;
-    margin-top: -30px;
-    margin-bottom: -20px;
-}
-
-div.texto-principal > span.descricao > p {
-    font-size: 1.5em;
-}
-
-section.lista-itens {
-    margin-top: 60px;
+    margin-left: 50px;
+    margin-top: 50px;
     margin-bottom: 50px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    align-items: center;
-}
-
-div.item-lista {
-    margin: auto;
-    width: 60%;
-    background-color: #1D2C40;
     padding: 10px;
-    text-align: center;
-    cursor: pointer;
+    font-size: 1.8em;
+    border-left: 1px solid black;
 }
 
-div.item-lista > a {
-    text-decoration: none;
-    font-size: 1.3em;
-    color: white;
-}
-
-div.item-lista:hover {
-    background-color: #779cab;
+details > summary {
+    list-style: none;
 }
 
 section.links-sociais {
