--- a/estilos/services-media-query.css
+++ b/estilos/services-media-query.css
@@ -8,6 +8,56 @@
     }
 }
 
-@media (min-width: 768px) {
-   
+@media (min-width: 425px) {
+    main {
+        display: flex;
+        flex-direction: row;
+    }
+
+   .title-services {
+    display: block;
+    width: 40%;
+    margin: auto;
+    margin-top: 220px;
+    transform: rotate(-90deg);
+   }
+
+   .title-services > p {
+    font-size: 3em;
+    text-transform: uppercase;
+    font-weight: 200;
+    letter-spacing: 10px;
+   }
+
+   section.lista-de-itens {
+    display: block;
+    width: 60%;
+   }
+}
+
+@media (min-width: 800px) {
+    .title-services {
+        margin-top: 180px;
+    }
+
+    section.lista-de-itens {
+        font-size: 1.6em;
+    }
+}
+
+@media (min-width: 1000px) {
+    .title-services {
+        margin-top: 70px;
+        width: 50%;
+    }
+
+    section.lista-de-itens {
+        width: 50%;
+    }
+
+    section.links-sociais {
+        width: 25%;
+        margin-top: 40px;
+        margin-bottom: 40px;
+    }
 }
