--- a/estilos/works-style.css
+++ b/estilos/works-style.css
@@ -51,10 +51,41 @@ nav#menu-principal > a:hover {
     text-decoration: overline;
 }
 
+.portfolio-item {
+    margin: auto;
+    margin-top: 80px;
+    margin-bottom: 80px;
+    width: 80%;
+}
 
+.portfolio-item > h3 {
+    font-size: 1.5em;
+    font-weight: 400;
+    color: #1D2C40;
+}
+
+.portfolio-item > img {
+    width: 95%;
+    margin-top: 20px;
+    margin-bottom: 25px;
+    border-radius: 5px;
+}
+
+.links-item-portfolio {
+    width: 90%;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.links-item-portfolio > a {
+    font-size: 1em;
+    color: #1D2C40;
+}
 
 section.links-sociais {
-    width: 50%;
+    width: 40%;
     margin: auto;
     margin-bottom: 30px;
     display: flex;
@@ -64,22 +95,22 @@ section.links-sociais {
 }
 
 div#instagram-id {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     background-image: url(../imagens/icon-instagram.png);
     background-size: cover;
 }
 
 div#linkedin-id {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     background-image: url(../imagens/icon-linkedin.png);
     background-size: cover;
 }
 
 div#email-id {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     background-image: url(../imagens/icon-e-mail.png);
     background-size: cover;
 }
