--- a/estilos/about-media-query.css
+++ b/estilos/about-media-query.css
@@ -1,3 +1,22 @@
 @charset "UTf-8";
 
 /*Todas as demais mídias PÁGINA SOBRE*/
+
+@media (min-width: 700px) {
+    div#foto-minha-jornada {
+        width: 370px;
+        height: 550px;
+    }
+
+    p#minha-jornada {
+        padding: 70px;
+        font-size: 1.7em;
+    }
+
+    div.fale-comigo {
+        width: 40%;
+    }
+
+    section.links-sociais {
+        width: 15%;
+}
